# todoing

./: AGENTS.md  PRODUCT.md  README.md  pyproject.toml
.agents/skills/doing/: SKILL.md
.agents/skills/todoing/: SKILL.md
.agents/skills/todoing-install/: SKILL.md
.doing/: index.json
.doing/tasks/: 2.md  4.md
.todoing/: index.json
.todoing/tasks/: 2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
src/doing/: constants.py  main.py  task.py
src/todoing/: __init__.py  constants.py  main.py  task.py
tests/: conftest.py  test_cli.py  test_store.py  test_task.py
