[project]
name = "todoing"
version = "1.1.0"
description = "Local, git-friendly task manager for AI agents and humans"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]
authors = [
  {name = "Billy Editiano"},
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
todoing = "todoing.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
]
